# tissue-map-tools

./: pyproject.toml
docs/: shard_binary_format.md
examples/: sharded_annotations_example.py
examples/merfish_mouse_ileum/: 0_raw_to_spatialdata.py  1_spatialdata_to_precomputed.py  3_precomputed_to_spatialdata.py
src/tissue_map_tools/: config.py  converters.py  igneous_converters.py  shard_util.py  utils.py
src/tissue_map_tools/data_model/: annotations.py  annotations_utils.py  shard_utils.py
tests/data_model/: test_annotations.py  test_annotations_utils.py  test_sharded_annotations.py
